@@ -35,6 +35,7 @@
 			<p><b>Listing of Shortcuts</b></p>
 
 			<p><i>Key Shortcuts</i>:<pre>
+    Backspace           Previous Image in List
     Ctrl-0              Zoom to Fit
     Ctrl-1              Zoom 1:1
     Ctrl-F              Open Folder
@@ -64,6 +65,7 @@
     Shift-Ctrl-S        Save As
     Shift-Return        Toggle Fullscreen
     Space               Next Image in List
+    1                   Zoom 1:1
 			</pre>
 			</p>
 			<p><i>Mouse Shortcuts</i>:<pre>
