@@ -1,4 +1,5 @@
 v0.9.3 - Pending
+	+ Added shortcuts for consistency with gqview/eog (Benjamin)
 	+ Added Hungarian translation (Sandor)
 
 v0.9.2 - January 28, 2008
